# ChangeLog for app-crypt/pinentry
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/pinentry/ChangeLog,v 1.172 2015/05/14 08:12:20 k_f Exp $

*pinentry-0.9.2-r1 (14 May 2015)

  14 May 2015; Kristian Fiskerstrand <k_f@gentoo.org> +pinentry-0.9.2-r1.ebuild,
  -pinentry-0.9.2.ebuild:
  Enable the GNOME3 pinentry if gnome-keyring USE flag is set

*pinentry-0.9.2 (13 May 2015)

  13 May 2015; Kristian Fiskerstrand <k_f@gentoo.org>
  +files/pinentry-0.9.2-cmd_confirm.patch, +files/pinentry-0.9.2-gnome3.patch,
  +files/pinentry-0.9.2-handlers-return.patch,
  +files/pinentry-0.9.2-linking-order.patch,
  +files/pinentry-0.9.2-management.patch, +files/pinentry-0.9.2-memory.patch,
  +files/pinentry-0.9.2-simplify.patch, +pinentry-0.9.2.ebuild:
  new upstream version 0.9.2 with fixes

  05 May 2015; Alon Bar-Lev <alonbl@gentoo.org> pinentry-0.9.1.ebuild:
  Remove aix hack as upstream addressed the issue

*pinentry-0.9.1 (03 May 2015)

  03 May 2015; Alon Bar-Lev <alonbl@gentoo.org>
  +files/pinentry-0.9.1-memleak.patch, +pinentry-0.9.1.ebuild:
  Version bump, bug#548456

  30 Apr 2015; Alon Bar-Lev <alonbl@gentoo.org> pinentry-0.9.0-r3.ebuild:
  Fix gcc-5 qt issue, bug#547528, thanks to Mark Wright

  31 Mar 2015; Ulrich Müller <ulm@gentoo.org> pinentry-0.9.0.ebuild,
  pinentry-0.9.0-r1.ebuild, pinentry-0.9.0-r2.ebuild, pinentry-0.9.0-r3.ebuild:
  Update dependency after package move of eselect modules to app-eselect.

*pinentry-0.9.0-r3 (22 Mar 2015)

  22 Mar 2015; Kristian Fiskerstrand <k_f@gentoo.org> +pinentry-0.9.0-r3.ebuild:
  Use qt4_get_bindir from qmake-utils instead of hardcoding moc path. Fixes
  #544110

*pinentry-0.9.0-r2 (01 Mar 2015)

  01 Mar 2015; Kristian Fiskerstrand <k_f@gentoo.org>
  +files/pinentry-0.9.0-accessibility.patch, +pinentry-0.9.0-r2.ebuild:
  Fix for bug #541400

  28 Feb 2015; Alon Bar-Lev <alonbl@gentoo.org> -pinentry-0.8.2.ebuild,